feature: Register_Logout

--- a/accounts/templates/accounts/forgot_password.html
+++ b/accounts/templates/accounts/forgot_password.html
@@ -11,7 +11,7 @@
 <div class="login-page-wrapper">
     <div class="login-container">
         <div class="login-box">
-            <h2>{% trans "Đặt lại mật khẩu" %}</h2>
+            <h2>{% trans "Quên mật khẩu" %}</h2>
             
             {% if messages %}
                 <ul class="messages">
@@ -32,29 +32,22 @@
             <form method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    {{ form.new_password.label_tag }} {# Giả sử form có trường 'new_password' #}
-                    {{ form.new_password }}
-                    {% if form.new_password.errors %}
+                    {{ form.email.label_tag }} {# Giả sử form có trường 'email' #}
+                    {{ form.email }}
+                    {% if form.email.errors %}
                         <ul class="errorlist">
-                            {% for error in form.new_password.errors %}
+                            {% for error in form.email.errors %}
                                 <li>{{ error }}</li>
                             {% endfor %}
                         </ul>
                     {% endif %}
                 </div>
-                <div class="form-group">
-                    {{ form.confirm_password.label_tag }} {# Giả sử form có trường 'confirm_password' #}
-                    {{ form.confirm_password }}
-                    {% if form.confirm_password.errors %}
-                        <ul class="errorlist">
-                            {% for error in form.confirm_password.errors %}
-                                <li>{{ error }}</li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
-                </div>
-                <button type="submit" class="btn-login">{% trans "Đặt lại mật khẩu" %}</button>
+                <button type="submit" class="btn-login">{% trans "Gửi liên kết đặt lại mật khẩu" %}</button>
             </form>
+
+            <div class="register-link"> {# Sử dụng lại lớp register-link để căn chỉnh #}
+                <p><a href="{% url 'accounts:login' %}">{% trans "Quay lại đăng nhập" %}</a></p>
+            </div>
         </div>
     </div>
 </div>
