--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -11,7 +11,7 @@
 <div class="login-page-wrapper">
     <div class="login-container">
         <div class="login-box">
-            <h2>{% trans "Đặt lại mật khẩu" %}</h2>
+            <h2>{% trans "Đổi mật khẩu" %}</h2>
             
             {% if messages %}
                 <ul class="messages">
@@ -31,6 +31,17 @@
             
             <form method="post">
                 {% csrf_token %}
+                <div class="form-group">
+                    {{ form.current_password.label_tag }} {# Giả sử form có trường 'current_password' #}
+                    {{ form.current_password }}
+                    {% if form.current_password.errors %}
+                        <ul class="errorlist">
+                            {% for error in form.current_password.errors %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                </div>
                 <div class="form-group">
                     {{ form.new_password.label_tag }} {# Giả sử form có trường 'new_password' #}
                     {{ form.new_password }}
@@ -53,7 +64,7 @@
                         </ul>
                     {% endif %}
                 </div>
-                <button type="submit" class="btn-login">{% trans "Đặt lại mật khẩu" %}</button>
+                <button type="submit" class="btn-login">{% trans "Đổi mật khẩu" %}</button>
             </form>
         </div>
     </div>
