--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -1,14 +1,37 @@
 {% extends 'base.html' %}
-{% load i18n %}
+{% load i18n static %}
+
+{% block head %}
+  {# nếu base.html có block để thêm CSS riêng #}
+  <link rel="stylesheet" href="{% static 'css/course_list.css' %}">
+{% endblock head %}
+
 {% block content %}
-  <h1>{% trans "Danh sách Khóa học" %}</h1>
-  <ul>
-    {% for c in courses %}
-      <li>
-        <a href="{% url 'courses:lesson_list' course_id=c.id %}">
-          {{ c.name }}
-        </a>
-      </li>
+<div class="container mt-5">
+  <h1 class="mb-4">{% trans "Danh sách Khóa học" %}</h1>
+  <div class="row">
+    {% for course in courses %}
+      <div class="col-sm-6 col-md-4 mb-4">
+        <div class="card h-100 shadow-sm">
+          <img 
+            src="{% if course.thumbnail %}{{ course.thumbnail.url }}{% else %}{% static 'images/course_placeholder.jpg' %}{% endif %}"
+            class="card-img-top" 
+            alt="{% blocktrans %}Hình ảnh khóa học {{ course.name }}{% endblocktrans %}">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">{{ course.name }}</h5>
+            <p class="card-text">{{ course.description|truncatewords:20 }}</p>
+            <a href="{% url 'courses:lesson_list' course_id=course.id %}" 
+               class="btn btn-primary mt-auto">
+              {% trans "Xem bài học" %}
+            </a>
+          </div>
+        </div>
+      </div>
+    {% empty %}
+      <div class="col-12">
+        <p class="text-muted">{% trans "Hiện tại chưa có khóa học nào." %}</p>
+      </div>
     {% endfor %}
-  </ul>
-{% endblock %}
+  </div>
+</div>
+{% endblock content %}
