--- a/static/css/main.css
+++ b/static/css/main.css
@@ -33,3 +33,15 @@
 .navbar.bg-brand .navbar-brand:hover {
   opacity: .9;
 }
+
+/* đổi màu khi list-group-item active */
+.list-group-item.active {
+    background-color: #f8f9fa !important; /* xám nhạt */
+    color: #000 !important;
+    border-color: #dee2e6 !important;
+}
+
+/* icon trong item active */
+.list-group-item.active i {
+    color: #0d6efd !important;
+}
