--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -253,3 +253,20 @@ body {
         background-size: cover;
     }
 }
+/* đổi màu nền khi item được chọn (active) */
+ .list-group-item.active {
+   background-color: #f8f9fa !important; /* xám nhạt */
+   color: #000 !important; /* chữ đen */
+   border-color: #dee2e6 !important; /* viền nhạt */
+ }
+
+  /* nếu muốn xanh nhạt thay vì xám */
+ .list-group-item.active {
+   background-color: #e7f1ff !important; /* xanh rất nhạt */
+   color: #000 !important;
+ }
+
+  /* chỉnh lại icon trong item active */
+ .list-group-item.active i {
+   color: #0d6efd !important; /* xanh Bootstrap */
+}
